[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exo"
version = "0.0.1"
description = "Run your own AI cluster at home with everyday devices"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "exo labs"},
]
keywords = ["ai", "distributed", "inference", "mlx", "tinygrad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp==3.10.11",
    "aiohttp_cors==0.7.0",
    "aiofiles==24.1.0",
    "grpcio==1.70.0",
    "grpcio-tools==1.70.0",
    "Jinja2==3.1.4",
    "numpy==2.0.0",
    "nuitka==2.5.1",
    "nvidia-ml-py==12.560.30",
    "opencv-python==4.10.0.84",
    "pillow==10.4.0",
    "prometheus-client==0.20.0",
    "protobuf==5.28.1",
    "psutil==6.0.0",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "rich==13.7.1",
    "scapy==2.6.1",
    "tqdm==4.66.4",
    "transformers==4.46.3",
    "uuid==1.30",
    "uvloop==0.21.0",
    "tinygrad @ git+https://github.com/tinygrad/tinygrad.git@ec120ce6b9ce8e4ff4b5692566a683ef240e8bc8",
]

[project.optional-dependencies]
formatting = [
    "yapf==0.40.2",
]
apple_silicon = [
    "mlx==0.29.1",
    "mlx-lm==0.21.1",
]
windows = [
    "pywin32==308",
]
nvidia-gpu = [
    "nvidia-ml-py==12.560.30",
]
amd-gpu = [
    "pyrsmi==0.2.0",
]
linux-amd = [
    "pyamdgpuinfo==2.1.6",
]

[project.scripts]
exo = "exo.main:run"

[tool.hatch.build.targets.wheel]
packages = ["exo"]

[tool.hatch.build.targets.wheel.sources]
"exo" = "exo"

[tool.hatch.build.targets.wheel.include]
"exo/tinychat/**/*" = "exo/tinychat/"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# Platform-specific dependencies are handled by the install script

# Dynamic dependencies based on platform detection
# Platform-specific dependencies are handled by the install script
